TAG: vocload-6-0-14-1
DATE: 04/03/2019
STAFF: lec 
CHANGES: 
1) TR12963/teleuse-to-mgd_java_api
2) TR13017/retire MouseCyc

TAG: vocload-6-0-13-5
DATE: 01/09/2019
STAFF: lec 
CHANGES: TR12963/SO.config/run first time as full/weekly as incremental

#
# tags 3, 4 were not added to HISTORY
#

TAG: vocload-6-0-13-2
DATE: 09/13/2018
STAFF: lec 
CHANGES: TR12955/GO.config/change DATA_DIR

TAG: vocload-6-0-13-1
DATE: 09/04/2018
STAFF: lec 
CHANGES: TR12734/GenFevah/Mouse Genome Project
remove biotype_vega.config

TAG: vocload-6-0-12-4
DATE: 08/16/2018
STAFF: lec
CHANGES: TR12928/fix insert DAG_DAG bug

TAG: vocload-6-0-12-3
DATE: 07/31/2018
STAFF: sc
CHANGES: TR12477 - slimterm load in production
    We missed that emapload.sh has a call to vocabbrevload
    updated that to slimtermload

TAG: vocload-6-0-12-2
DATE: 04/25/2018
STAFF: lec
CHANGES: TR12734/GenFevah
added biotype_mgp.config

TAG: vocload-6-0-12-1
DATE: 03/07/2018
STAFF: lec
CHANGES: TR12662/GMC/autosequence changes

TAG: vocload-6-0-10-5
STAFF: lec
DATE: 06/21/2017
CHANGES: 
MP.config : add anna.anagnostopoulos@jax.org

TAG: vocload-6-0-10-4
STAFF: lec
DATE: 06/13/2017
CHANGES: 
TR12616/Disease Ontology
DOindex.html; add links to other log reports

TAG: vocload-6-0-10-3
TAG: vocload-6-0-10-2
TAG: vocload-6-0-10-1
DATE: 04/27/2017, 05/08/2017
STAFF: lec
CHANGES: 
TR12540/Disease Ontology (DO) All The Way
OMIM.config : OMIMdeleteobsolete.py is obsolete
OMIM.py : comment out OMIM.animalmodel
OMIMtermcheck.py : remove OMIM annotation query

TAG: vocload-6-0-8-9
TAG: vocload-6-0-8-8
STAFF: sc
CHANGES: TR12461
1) emapload.sh - delete old fatal and warning reports before running
       emapload.py, we don't want old ones hanging around
2) emapload.py - bug reporting multiple emaps root terms, see script for details

TAG: vocload-6-0-8-7
DATE: 03/16/2016
STAFF: lec
loadOBO.py : do not include Synonyms for obsolete terms

TAG: vocload-6-0-8-6
DATE: 03/13/2016
STAFF: lec
loadTerms.py/processSecondaryTerms/duplicate
