@@ -1,3 +1,9 @@
+TAG: vocload-6-0-14-2
+DATE: 05/15/2019
+STAFF: lec 
+CHANGES: 
+1) TR13089/add GXD_HTSample to sanity check
+
 TAG: vocload-6-0-14-1
 DATE: 04/03/2019
 STAFF: lec 
